--- a/global1.css
+++ b/global1.css
@@ -14,8 +14,7 @@ footer { clear: both;
         font-size: 75%;
         text-align: center;
         height: 1% ;
-        color: #E7CE5E;
-        border: 1px solid #E7CE5E;} 
+        color: #E7CE5E;} 
 
 .center {
   padding: 70px 0;
